--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -5,14 +5,6 @@ operationId: createContact
 description: 'Create a contact with payload'
 security:
   - bearerAuth: []
-parameters:
-  - in: header
-    name: Authorization
-    required: true
-    description: The token issued to the current user..
-    schema:
-      type: string
-      example: 'rV3oW/GjUR5e6i5btw+3ayBqXuMDf5iOufGxffcb'
 requestBody:
   content:
     multipart/form-data:
@@ -41,14 +33,11 @@ requestBody:
             description: "Contact's type"
             type: string
             enum: ['work', 'home', 'personal']
+            example: 'personal'
           isFavourite:
             description: 'true || false'
             type: boolean
             example: true
-          userId:
-            description: "Contact's user id"
-            type: string
-            example: 65e4decdd286b30065d54af9
           photo:
             description: "Contact's photo"
             type: string
